--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,10 @@
+p {
+    margin: 10px 2px;
+    padding: 10px 2px;
+}
+
 .container {
-    width: 640px;
+    width: 75%;
     margin: 30px auto;
     padding: 20px 30px;
     background-color: #f7f7f7;
@@ -21,4 +26,14 @@
     width: 20%;
     padding: 10px 40px;
     background-color: #fadbdb;
+}
+
+.highlightC {
+    margin: 20px 2px ;
+    padding: 20px 2px ;
+}
+
+.change-font {
+    font-size: 30px ;
+    font-family: 'Times New Roman', Times, serif ;
 }
